[project]
name = "maas-region"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "ops~=3.1",
    "tenacity~=9.1",
    "boto3>=1.43.11,<1.44.0",
    "botocore>=1.43.11,<1.44.0",
    "cosl",
    "opentelemetry-exporter-otlp-proto-http>=1.21.0",
    "pydantic==2.13.4",
    "validators>=0.35.0",
    "opentelemetry-api",
]

[dependency-groups]
lint = [
    "codespell",
    "pyproject-fmt",
    "pyright",
    "ruff",
    "toml-fmt-common<1.3.3",
    "tox-ini-fmt",
]
unit = [
    "coverage[toml]",
    "pytest",
]
scenario = [
    "cosl",
    "ops-scenario",
    "pytest",
]
integration = [
    "juju",
    "pytest",
    "pytest-operator",
]

# Linting tools configuration
[tool.ruff]
target-version = "py314"
line-length = 99
extend-exclude = [ "*.egg_info", "__pycache__" ]
lint.select = [
  "C",
  "D",
  "E",
  "F",
  "F401",
  "I",
  "I001",
  "N",
  "RUF",
  "UP",
  "W",
]
lint.ignore = [ "D107", "E501" ]
lint.extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
lint.per-file-ignores = { "tests/*" = [ "D100", "D101", "D102", "D103", "D104" ] }
lint.mccabe.max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "tests"]
pythonversion = "3.14"

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
ini_options.log_cli_level = "INFO"

[tool.coverage]
# Formatting tools configuration
run.branch = true
report.show_missing = true
